# PolynomialCalc

./: CMakeLists.txt  CMakePresets.json
PolyApp/: CMakeLists.txt  PolyApp.cpp  PolyApp.h
PolyApp/Containers/: List.h  Vector.h
PolyApp/Polynomial/: Monom.h  Polynomial.h
PolyApp/Tables/: AVLTreeTable.hpp  LinearListTable.hpp  LinearTableOnAnArray.hpp  ListHashTable.hpp  MyExcepions.hpp  OpenHashTable.hpp  OrderedTableOnAnArray.hpp  TableInterface.hpp
PolyApp/UI/fb/: PolyMathUI.fbp  wxUIPM.cpp  wxUIPM.h
PolyApp/UI/myUI/Headers/: PolyMathUIMyDialogAdd.h  PolyMathUIMyDialogDelete.h  PolyMathUIMyDialogRename.h  PolyMathUIMyDialogSaveResult.h  PolyMathUIframeMain.h  PolyMathUIframeTable.h
PolyApp/UI/myUI/Source/: PolyMathUIMyDialogAdd.cpp  PolyMathUIMyDialogDelete.cpp  PolyMathUIMyDialogRename.cpp  PolyMathUIMyDialogSaveResult.cpp  PolyMathUIframeMain.cpp  PolyMathUIframeTable.cpp
PolyApp/googletest/: CMakeLists.txt  poly_tests.cc
PolyApp/googletest/tablestests/: table_tests.cc
